--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
   "bracketSpacing": true,
 }
