--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "./node_modules/.bin/eslint ./src",
+    "lint": "./node_modules/.bin/eslint ./src",
     "precommit": "NODE_ENV=production lint-staged"
   },
   "lint-staged": {
