--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "./node_modules/.bin/eslint ./src",
-    "precommit": "NODE_ENV=production lint-staged"
+    "lint": "./node_modules/.bin/eslint ./src"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.{js,jsx}": [
