--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "pretty-quick --staged",
-      "eslint src/ --fix",
-      "git add"
+      "eslint src/ --fix"
     ]
   },
   "eslintConfig": {
