--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,css}": [
+    "*.{js,jsx,css,html}": [
       "pretty-quick --staged",
       "eslint src/ --fix"
     ]
