allows addition file upload without conflicting current upload

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,8 +52,7 @@
         "react/no-did-update-set-state": 0,
         "react/button-has-type": 0,
         "func-names": 0,
-        "no-use-before-define": 0,
-        "no-unused-vars": "off"
+        "no-use-before-define": 0
     },
     "settings": {
         "import/resolver": {
