--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "react-ui-file-upload",
+  "name": "rcfiles-uploader",
   "version": "0.1.0",
-  "private": true,
   "main": "src/index.js",
   "dependencies": {
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
     "rc-progress": "^3.1.3",
     "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
-  },
-  "peerDependencies": {
+    "web-vitals": "^0.2.4",
+    "react-scripts": "4.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-dom": "^17.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -85,5 +82,5 @@
   "bugs": {
     "url": "https://github.com/ayotidapo/rcfiles-uploader/issues"
   },
-  "homepage": "https://github.com/ayotidapo/rcfiles-uploader#readme"
+  "homepage": "/"
 }
