--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "rcfiles-uploader",
   "version": "0.2.1",
-  "main": "src/index.js",
-  "dependencies": {
+  "main": "dist/index.js",
+  "peerDependencies": {
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
     "rc-progress": "^3.1.3",
-    "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4",
+    "react": "^16.8.0",
+    "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "prepublishOnly": "babel ./src --out-dir ./dist -s inline"
   },
   "husky": {
     "hooks": {
@@ -48,10 +48,18 @@
       "last 1 safari version"
     ]
   },
+  "files": [
+    "dist/*"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -61,8 +69,15 @@
     "eslint-plugin-react": "^7.22.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
+    "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "rc-progress": "^3.1.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "uuid": "^8.3.2",
+    "web-vitals": "^0.2.4"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "repository": {
