--- a/package.json
+++ b/package.json
@@ -45,7 +45,11 @@
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "axios": "^0.21.1",
+    "node-sass": "^4.14.1",
+    "rc-progress": "^3.1.3",
+    "uuid": "^8.3.2"
   },
   "files": [
     "dist"
