--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "axios": "^0.21.1",
+    "node-sass": "^4.14.1",
+    "rc-progress": "^3.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "microbundle-crl": "^0.13.10",
