--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "peerDependencies": {
     "react": "^16.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0",
+    "react-scripts": "^3.4.1",
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
     "rc-progress": "^3.1.3",
