--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0",
-    "react-scripts": "^3.4.1",
+    "react": "^15.0.0 || ^16 || ^17",
+    "react-dom": "^15.0.0 || ^16 || ^17",
+    "react-scripts": "^3.4.1"
+  },
+  "dependencies": {
     "axios": "^0.21.1",
     "node-sass": "^4.14.1",
     "rc-progress": "^3.1.3",
