--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-files-uploader",
   "version": "1.0.0",
   "description": "Made with create-react-library",
-  "author": "https://github.com/ayotidapo/rcfiles-uploader",
+  "author": "https://github.com/ayotidapo",
   "license": "MIT",
-  "repository": "https://github.com/ayotidapo/rcfiles-uploader",
+  "repository": "https://github.com/ayotidapo/react-files-uploader",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
