--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-files-uploader",
+  "name": "files-uploader-rc",
   "version": "2.0.0",
   "description": "Made with create-react-library",
   "author": "https://github.com/ayotidapo",
   "license": "MIT",
-  "repository": "https://github.com/ayotidapo/react-files-uploader",
+  "repository": "https://github.com/ayotidapo/files-uploader-rc",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
