--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Made with create-react-library",
   "author": "https://github.com/ayotidapo",
   "license": "MIT",
-  "repository": "https://github.com/ayotidapo/files-uploader-rc",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ayotidapo/files-uploader-rc.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -61,5 +64,17 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/ayotidapo/files-uploader-rc/issues"
+  },
+  "homepage": "https://github.com/ayotidapo/files-uploader-rc#readme",
+  "directories": {
+    "example": "example"
+  },
+  "eslintConfig": {
+    "globals": {
+      "window": true
+    }
+  }
 }
