--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-scripts": "^4.0.0 || ^5.0.0"
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "rc-progress": "^3.1.3",
+    "uuid": "^8.3.2"
   },
   "dependencies": {
-    "rc-progress": "^3.1.3",
-    "sass": "^1.57.1",
-    "uuid": "^8.3.2"
+    "sass": "^1.57.1"
   },
   "devDependencies": {
     "axios": "^0.21.4",
