--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "files-uploader-rc",
-  "version": "3.3.7",
+  "version": "3.3.8",
   "description": "Made with create-react-library",
   "author": "https://github.com/ayotidapo",
   "license": "MIT",
@@ -63,7 +63,7 @@
   },
   "files": [
     "dist",
-    "@types/"
+    "@types"
   ],
   "bugs": {
     "url": "https://github.com/ayotidapo/files-uploader-rc/issues"
